tests/pass/debugtest.zf
foo() {
    debug (3) {
        foo();
    }
}
