tests/fail/va_args_short_call.zf
extc foo(a: int, __c_va_args): int;

bar() {
    foo();
}
